--- a/Data/Sys/GameSettings/P4B.ini
+++ b/Data/Sys/GameSettings/P4B.ini
@@ -1,11 +1,11 @@
-# GWOE5G - Blowout
+# P4BJ01 - Biohazard 4 Preview Disc
 
 [Core]
 # Values set here will override the main Dolphin settings.
 
 [EmuState]
 # The Emulation State. 1 is worst, 5 is best, 0 is not set.
-EmulationStateId = 3
+EmulationStateId =
 EmulationIssues =
 
 [OnLoad]
@@ -18,5 +18,5 @@ EmulationIssues =
 # Add action replay cheats here.
 
 [Video_Settings]
-EFBScale = -1
-
+# override value that was set in P.ini back to defaults
+SafeTextureCacheColorSamples = 
