--- a/Data/Sys/GameSettings/SNS.ini
+++ b/Data/Sys/GameSettings/SNS.ini
@@ -1,12 +1,12 @@
-# GWOE5G - Blowout
+# SNSE52 - Nascar: The Game 2011
 
 [Core]
 # Values set here will override the main Dolphin settings.
 
 [EmuState]
 # The Emulation State. 1 is worst, 5 is best, 0 is not set.
-EmulationStateId = 3
 EmulationIssues =
+EmulationStateId =
 
 [OnLoad]
 # Add memory patches to be loaded once on boot here.
@@ -18,5 +18,4 @@ EmulationIssues =
 # Add action replay cheats here.
 
 [Video_Settings]
-EFBScale = -1
-
+SafeTextureCacheColorSamples = 0
