--- a/Source/Core/VideoCommon/VideoCommon.vcxproj.filters
+++ b/Source/Core/VideoCommon/VideoCommon.vcxproj.filters
@@ -44,6 +44,9 @@
     <ClCompile Include="RenderBase.cpp">
       <Filter>Base</Filter>
     </ClCompile>
+    <ClCompile Include="RenderState.cpp">
+      <Filter>Base</Filter>
+    </ClCompile>
     <ClCompile Include="TextureCacheBase.cpp">
       <Filter>Base</Filter>
     </ClCompile>
@@ -180,6 +183,9 @@
       <Filter>Base</Filter>
     </ClInclude>
     <ClInclude Include="RenderBase.h">
+      <Filter>Base</Filter>
+    </ClInclude>
+    <ClInclude Include="RenderState.h">
       <Filter>Base</Filter>
     </ClInclude>
     <ClInclude Include="TextureCacheBase.h">
